college prj/force-app/main/default/objects/Books_Issue__c/Books_Issue__c.object-meta.xml
<CustomObject>
    <label>Books Issue</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books Issue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>