college prj/force-app/main/default/objects/Books_Issue__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Select Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Books Issue</relationshipLabel>
    <relationshipName>Books_Issue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>