college prj/force-app/main/default/objects/Books_Issue__c/fields/books_taken__c.field-meta.xml
<CustomField>
    <fullName>books_taken__c</fullName>
    <defaultValue>1</defaultValue>
    <label>books taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>