college prj/force-app/main/default/objects/Books_Issue__c/fields/Date_Borrowed__c.field-meta.xml
<CustomField>
    <fullName>Date_Borrowed__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Borrowed</label>
    <type>Date</type>
</CustomField>