college prj/force-app/main/default/objects/Books_Issue__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Books Issue</relationshipLabel>
    <relationshipName>Books_Issue</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>